@@ -5,6 +5,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.Lists;
 import org.apache.http.HttpStatus;
 import org.slf4j.helpers.MessageFormatter;
+import uk.gov.hmcts.reform.hmc.client.datastore.model.ElasticSearch;
+import uk.gov.hmcts.reform.hmc.client.datastore.model.Query;
+import uk.gov.hmcts.reform.hmc.client.datastore.model.Terms;
 import uk.gov.hmcts.reform.hmc.client.hmi.ListingReasonCode;
 import uk.gov.hmcts.reform.hmc.data.ActualAttendeeIndividualDetailEntity;
 import uk.gov.hmcts.reform.hmc.data.ActualHearingDayEntity;
@@ -37,6 +40,7 @@ import uk.gov.hmcts.reform.hmc.data.ReasonableAdjustmentsEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredFacilitiesEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredLocationsEntity;
 import uk.gov.hmcts.reform.hmc.data.UnavailabilityEntity;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.HearingStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.LinkType;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.ListAssistCaseStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.PutHearingStatus;
@@ -76,6 +80,7 @@ import uk.gov.hmcts.reform.hmc.model.UnavailabilityDow;
 import uk.gov.hmcts.reform.hmc.model.UnavailabilityRanges;
 import uk.gov.hmcts.reform.hmc.model.UpdateHearingRequest;
 import uk.gov.hmcts.reform.hmc.model.hmi.Entity;
+import uk.gov.hmcts.reform.hmc.service.common.DefaultObjectMapperService;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -85,6 +90,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.IntStream;
 
 import static uk.gov.hmcts.reform.hmc.constants.Constants.CANCELLATION_REQUESTED;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.CREATE_HEARING_REQUEST;
@@ -100,6 +106,8 @@ public class TestingUtil {
     public static final String INVALID_CASE_REFERENCE = "1111222233334445";
     public static final List<String> CANCELLATION_REASON_CODES = List.of("test 1", "test 2");
     public static final Long ID = 2000000000L;
+
+    private static DefaultObjectMapperService objectMapperService = new DefaultObjectMapperService(new ObjectMapper());
 
     private TestingUtil() {
     }
@@ -339,6 +347,26 @@ public class TestingUtil {
         CaseHearingRequestEntity caseHearingRequestEntity = caseHearingRequestEntity();
         caseHearingRequestEntity.setHearingParties(List.of(new HearingPartyEntity()));
         hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntity));
+        return hearingEntity;
+    }
+
+    public static HearingEntity createHearingEntity() {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(1L);
+        hearingEntity.setStatus(POST_HEARING_STATUS);
+        hearingEntity.setLinkedOrder(1L);
+        CaseHearingRequestEntity caseHearingRequestEntity = createCaseHearingRequestEntity(hearingEntity.getId());
+        caseHearingRequestEntity.setHearingParties(List.of(hearingPartyEntityOrg(), hearingPartyEntityInd()));
+        hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntity));
+        hearingEntity.setHearingResponses(createHearingResponseEntities());
+        return hearingEntity;
+    }
+
+    public static HearingEntity createHearingEntity(Long hearingId) {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(hearingId);
+        hearingEntity.setHearingResponses(createHearingResponseEntities());
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         return hearingEntity;
     }
 
@@ -609,7 +637,7 @@ public class TestingUtil {
         hearingEntity.setId(ID);
         hearingEntity.setIsLinkedFlag(Boolean.TRUE);
         entity.setCaseHearingID(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         entity.setVersionNumber(1);
         hearingEntity.setIsLinkedFlag(true);
         hearingEntity.setLinkedGroupDetails(getLinkedGroupDetails());
@@ -618,7 +646,7 @@ public class TestingUtil {
         entity.setCaseReference("12345");
         entity.setHearingType("Some hearing type");
         entity.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
-        entity.getHearing().getHearingResponses().get(0)
+        entity.getHearing().getHearingResponses().getFirst()
             .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
         entity.setHearingChannels(hearingChannelsEntity());
         return entity;
@@ -671,7 +699,7 @@ public class TestingUtil {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
         entity1.setCaseHearingID(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         entity1.setHearing(hearingEntity);
         entity1.setHmctsServiceCode("TEST");
         entity1.setCaseReference("12345");
@@ -800,7 +828,7 @@ public class TestingUtil {
     public static HearingEntity getCaseHearingsEntity(PartyType partyType) {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         if (partyType.getLabel().equals(PartyType.IND.getLabel())) {
             hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
@@ -814,7 +842,7 @@ public class TestingUtil {
     public static HearingEntity getCaseHearingsEntity() {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
 
@@ -921,7 +949,7 @@ public class TestingUtil {
     public static HearingEntity getHearingsEntityForHearingActualsIndividual() {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         hearingEntity.getCaseHearingRequests().add(caseHearingRequestEntityWithPartyInd());
 
@@ -1129,6 +1157,104 @@ public class TestingUtil {
         return entity;
     }
 
+    public static List<CaseHearingRequestEntity> createMultipleCaseHearingRequestEntities() {
+        List<CaseHearingRequestEntity> entities = new ArrayList<>();
+        IntStream.range(0, 10).forEach(
+            id -> entities.add(createCaseHearingRequestEntity(ID + id)));
+
+        return entities;
+    }
+
+    private static CaseHearingRequestEntity createCaseHearingRequestEntity(Long hearingId) {
+        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
+        HearingEntity hearingEntity = createHearingEntity(hearingId);
+        hearingEntity.setHearingResponses(createHearingResponseEntities());
+        entity1.setCaseHearingID(hearingId);
+        entity1.setHearing(hearingEntity);
+        entity1.setVersionNumber(1);
+        entity1.setHmctsServiceCode("TEST");
+        entity1.setCaseReference("12345");
+        entity1.setHearingType("Some hearing type");
+        return entity1;
+    }
+
+    public static List<HearingResponseEntity>  createHearingResponseEntities() {
+        List<HearingResponseEntity> entities = new ArrayList<>();
+        for (int i = 0; i < 20; i++) {
+            entities.add(hearingResponseEntity(1, 1, LocalDateTime.now(), createHearingDayDetailsEntityList()));
+        }
+        return entities;
+    }
+
+    public static List<HearingDayDetailsEntity> createHearingDayDetailsEntityList() {
+        List<HearingDayDetailsEntity> entities = new ArrayList<>();
+        LocalDateTime startDateTime = LocalDateTime.now().plusDays(30);
+        for (int i = 0; i < 20; i++) {
+            entities.add(createHearingDayDetailsEntity(i, startDateTime.minusMinutes(i * 3)));
+        }
+        return entities;
+    }
+
+    public static HearingDayDetailsEntity createHearingDayDetailsEntity(int id, LocalDateTime startDateTime) {
+        HearingDayDetailsEntity entity = new HearingDayDetailsEntity();
+        entity.setStartDateTime(startDateTime);
+        entity.setEndDateTime(startDateTime.plusHours(2));
+        entity.setVenueId("venue" + id);
+        entity.setRoomId("room" + id);
+        entity.setHearingAttendeeDetails(createHearingAttendeeDetailsEntityList(entity));
+        entity.setHearingDayPanel(createHearingDayPanelEntityList(entity));
+        return entity;
+    }
+
+    public static List<HearingAttendeeDetailsEntity> createHearingAttendeeDetailsEntityList(
+        HearingDayDetailsEntity hearingDayDetailsEntity) {
+        List<HearingAttendeeDetailsEntity> entities = new ArrayList<>();
+        for (int i = 0; i < 20; i++) {
+            entities.add(createHearingAttendeeDetailsEntity(i, hearingDayDetailsEntity));
+        }
+        return entities;
+    }
+
+    public static HearingAttendeeDetailsEntity createHearingAttendeeDetailsEntity(
+        int id, HearingDayDetailsEntity hearingDayDetailsEntity) {
+        HearingAttendeeDetailsEntity entity = new HearingAttendeeDetailsEntity();
+        entity.setId((long) id);
+        entity.setPartyId("partyid" + id);
+        entity.setPartySubChannelType("subchanneltype" + id);
+        entity.setCreatedDateTime(LocalDateTime.now());
+        entity.setHearingDayDetails(hearingDayDetailsEntity);
+        return entity;
+    }
+
+    public static List<HearingDayPanelEntity> createHearingDayPanelEntityList(
+        HearingDayDetailsEntity hearingDayDetailsEntity) {
+        List<HearingDayPanelEntity> entities = new ArrayList<>();
+        for (int i = 0; i < 20; i++) {
+            entities.add(createHearingDayPanelEntity(i, hearingDayDetailsEntity));
+        }
+        return entities;
+    }
+
+    public static HearingDayPanelEntity createHearingDayPanelEntity(int id,
+                                                                    HearingDayDetailsEntity hearingDayDetailsEntity) {
+        HearingDayPanelEntity entity = new HearingDayPanelEntity();
+        entity.setId((long) id);
+        entity.setHearingDayDetails(hearingDayDetailsEntity);
+        entity.setPanelUserId("paneluser" + id);
+        entity.setIsPresiding(false);
+        return entity;
+    }
+
+    public static HearingDayPanelEntity createHearingDayPanelEntity(int id, String panelUserId, boolean isPresiding,
+                                                                    HearingDayDetailsEntity hearingDayDetailsEntity) {
+        HearingDayPanelEntity entity = new HearingDayPanelEntity();
+        entity.setId((long) id);
+        entity.setHearingDayDetails(hearingDayDetailsEntity);
+        entity.setPanelUserId(panelUserId);
+        entity.setIsPresiding(isPresiding);
+        return entity;
+    }
+
     public static HearingPartyEntity hearingPartyEntityOrg() {
         HearingPartyEntity entity = new HearingPartyEntity();
         entity.setPartyReference("reference");
@@ -1139,7 +1265,6 @@ public class TestingUtil {
 
         return entity;
     }
-
 
     public static HearingPartyEntity hearingPartyEntityForClone() {
         HearingPartyEntity entity = new HearingPartyEntity();
@@ -1190,7 +1315,6 @@ public class TestingUtil {
 
     public static PartyRelationshipDetailsEntity partyRelationshipDetailsEntity(String targetTechPartyId,
                                                                                  String relationshipType) {
-
         HearingPartyEntity targetHearingPartyEntity = new HearingPartyEntity();
         targetHearingPartyEntity.setPartyReference(targetTechPartyId);
 
@@ -1603,7 +1727,12 @@ public class TestingUtil {
         return linkedHearingStatusAuditEntity;
     }
 
+    public static String createSearchQuery(List<String> ccdCaseRefs) {
+        Terms terms = new Terms(ccdCaseRefs);
+        Query query = new Query(terms);
+        return objectMapperService.convertObjectToJsonNode(new ElasticSearch(query)).toString();
+    }
+
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper().findAndRegisterModules();
 
 }
-
